<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/settings_category_general_notifications">
		<com.cgollner.unclouded.preferences.SwitchPreferenceCompat
			android:key="@string/key_general_notifications_on"
			android:title="@string/settings_general_notifications"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="@string/key_notification_vibrate_on"
			android:title="@string/settings_notifications_vibrate"
			android:dependency="@string/key_general_notifications_on"
			android:defaultValue="false"/>
		<CheckBoxPreference
			android:key="@string/key_notification_light_on"
		    android:title="@string/settings_notifications_light"
		    android:dependency="@string/key_general_notifications_on"
		    android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/settings_category_block_notifications">
		<com.cgollner.unclouded.preferences.SwitchPreferenceCompat
			android:key="@string/key_block_notifications_on"
			android:title="@string/settings_block_notifications"
			android:defaultValue="true"/>
		<com.nshsappdesignteam.nshsguide.tabs.settings.IntListPreference
			android:key="@string/key_block_notifications_time_adjust"
			android:title="@string/settings_notification_time_adjust"
			android:dependency="@string/key_block_notifications_on"
			android:entries="@array/entries_time_adjust"
			android:entryValues="@array/values_time_adjust"
			android:summary="@string/empty"
			android:defaultValue="10"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/settings_category_app">
		<com.cgollner.unclouded.preferences.SwitchPreferenceCompat
			android:key="@string/key_sync_on"
			android:title="@string/settings_sync"
			android:summary="@string/summary_sync"
			android:defaultValue="true"/>
		<ListPreference
			android:key="@string/key_default_landing_page"
			android:title="@string/settings_default_landing_page"
			android:entries="@array/entries_default_landing_page"
			android:entryValues="@array/values_default_landing_page"
			android:summary="%1$s"
			android:defaultValue="absentTeachers"/>
	</PreferenceCategory>
</PreferenceScreen>