<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
	<include layout="@layout/toolbar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="@dimen/activity_vertical_margin">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:layout_gravity="top"
			android:src="@drawable/ic_person_24dp"
			android:tint="@color/grey_icons"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/activity_horizontal_margin">
				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/firstNameText"
					android:hint="@string/request_teacher_hint_first_name"
					android:singleLine="true"
					android:inputType="textCapWords|textPersonName"/>
			</android.support.design.widget.TextInputLayout>
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/activity_horizontal_margin">
				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/lastNameText"
					android:hint="@string/request_teacher_hint_last_name"
					android:singleLine="true"
					android:inputType="textCapWords|textPersonName"/>
			</android.support.design.widget.TextInputLayout>
		</LinearLayout>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/request_teacher_info"
		android:layout_margin="@dimen/activity_vertical_margin"
		android:gravity="center"
		style="@style/TextView.Secondary"/>
</LinearLayout>