<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<include layout="@layout/toolbar"
		         app:layout_scrollFlags="scroll|enterAlways"/>
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:animateLayoutChanges="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<com.nshsappdesignteam.nshsguide.helper.BlockImage
				android:id="@+id/blockImage"
				android:layout_width="@dimen/add_teacher_block_image_size"
				android:layout_height="@dimen/add_teacher_block_image_size"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:background="@drawable/block_bg_a"
				android:gravity="center"
				android:text="A"
				android:textColor="@android:color/white"
				android:textSize="@dimen/add_teacher_block_text_size"
				android:transitionName="@string/transition_target_block_image"/>

			<LinearLayout
				android:id="@+id/blockNumbers"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginLeft="@dimen/activity_horizontal_margin"
				android:layout_marginRight="@dimen/activity_horizontal_margin"
				android:orientation="horizontal">

				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/block1Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:background="@drawable/block_bg_a"
					android:gravity="center"
					android:text="A1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:transitionName="@string/transition_target_block_1_image"/>

				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/block2Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:background="@drawable/block_bg_a"
					android:gravity="center"
					android:text="A2"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:transitionName="@string/transition_target_block_2_image"/>

				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/block3Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:background="@drawable/block_bg_a"
					android:gravity="center"
					android:text="A3"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:transitionName="@string/transition_target_block_3_image"/>

				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/block4Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:background="@drawable/block_bg_a"
					android:gravity="center"
					android:text="A4"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:transitionName="@string/transition_target_block_4_image"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:id="@+id/lunchSelectionLayout"
				android:layout_marginBottom="@dimen/activity_vertical_margin">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lunch"
					style="@style/TextView"/>
				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/lunch1Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:background="@drawable/block_bg_default"
					android:gravity="center"
					android:text="1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					app:fade_color="true"/>
				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/lunch2Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:background="@drawable/block_bg_default"
					android:gravity="center"
					android:text="2"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					app:fade_color="true"/>
				<com.nshsappdesignteam.nshsguide.helper.BlockImage
					android:id="@+id/lunch3Image"
					android:layout_width="@dimen/add_teacher_block_num_image_size"
					android:layout_height="@dimen/add_teacher_block_num_image_size"
					android:background="@drawable/block_bg_default"
					android:gravity="center"
					android:text="3"
					android:textColor="@android:color/white"
					android:textSize="@dimen/add_teacher_block_num_text_size"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					app:fade_color="true"/>
			</LinearLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/teacherNameTextInputLayout">
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_person_24dp"
					android:tint="@color/grey_icons"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:id="@+id/teacherIcon"/>
				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:layout_toRightOf="@+id/teacherIcon">
					<AutoCompleteTextView
						android:id="@+id/teacherNameInputField"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:completionThreshold="1"
						android:hint="@string/add_teacher_hint_name"
						android:singleLine="true"
						android:inputType="textPersonName"
						android:imeOptions="actionNext"/>
				</android.support.design.widget.TextInputLayout>
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:src="@drawable/ic_refresh_24dp"
					android:id="@+id/refreshTeachersButton"
					android:tint="@color/accent"/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/subjectTextInputLayout">
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_subject_24dp"
					android:tint="@color/grey_icons"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:id="@+id/subjectIcon"/>
				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:layout_toRightOf="@+id/subjectIcon">
					<android.support.design.widget.TextInputEditText
						android:id="@+id/subjectInputField"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:completionThreshold="1"
						android:hint="@string/add_teacher_hint_subject"
						android:singleLine="true"
						android:inputType="textCapWords"
						android:imeOptions="actionNext"/>
				</android.support.design.widget.TextInputLayout>
			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/roomNumTextInputLayout">
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_place_24dp"
					android:tint="@color/grey_icons"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:id="@+id/roomNumIcon"/>
				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_marginRight="@dimen/activity_horizontal_margin"
					android:layout_toRightOf="@+id/roomNumIcon">
					<android.support.design.widget.TextInputEditText
						android:id="@+id/roomNumInputField"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:completionThreshold="1"
						android:hint="@string/add_teacher_hint_room_number"
						android:singleLine="true"
						android:inputType="number|textCapWords"
						android:imeOptions="actionDone"/>
				</android.support.design.widget.TextInputLayout>
			</RelativeLayout>
		</LinearLayout>
	</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>